fixed styling on small screen size that is less than 400px

--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -729,6 +729,82 @@ h2 {
     }
 }
 
+@media(max-width:824px) and (orientation: landscape){
+    .leftDiv p {
+        font-size: 125%;
+    }
+    .middleDiv p {
+        font-size: 1500%;
+        position: relative;
+        top: -15%;
+    }
+    .rightDiv p {
+        font-size: 125%;
+    }
+    .to {
+        top: 21%;
+    }
+    .the {
+        top: 35%;
+    }
+    .portfolio {
+        top: 43%;
+    }
+    .of {
+        top: 58%;
+    }
+    .name {
+        bottom: 65%;
+    }
+    .frontend {
+        bottom: 53%;
+    }
+    .and {
+        bottom: 41%;
+    }
+    .backend {
+        bottom: 29%;
+    }
+    .developer {
+        bottom: 17%;
+    }
+    .portfolioBtn,
+    .contactBtn {
+        font-size: 100%;
+    }
+    .contactBtn {
+        bottom: -10%;
+    }
+    h2 {
+        font-size: 220%;
+    }
+    #about p {
+        font-size: 100%;
+    }
+    .skillList h4 {
+        font-size: 150%;
+    }
+    .skillList span {
+        font-size: 120%;
+    }
+    #skills {
+        height: auto;
+    }
+    .project {
+        width: 280px;
+        height: 280px;
+    }
+    #contact p {
+        font-size: 100%;
+    }
+    #contact a {
+        font-size: 100%;
+    }
+    footer p {
+        font-size: 100%;
+    }
+}
+
 @media(max-width:768px) and (orientation: portrait) {
     .portfolioBtn,
     .contactBtn {
@@ -763,7 +839,7 @@ h2 {
     }
 }
 
-@media(max-width:576px) and (orientation: portrait){
+@media(max-width:681px) and (orientation: portrait){
     .skillList h4 {
         font-size: 150%;
         margin-bottom: 15px;
@@ -878,7 +954,31 @@ h2 {
     }
 }
 
-@media(max-width:320px) and (orientation: portrait){
+@media(max-width:569px) and (orientation: landscape){
+    .middleDiv p {
+        top: -30%;
+    }
+    .frontend {
+        bottom: 50%;
+    }
+    .and {
+        bottom: 35%;
+    }
+    .backend {
+        bottom: 20%;
+    }
+    .developer {
+        bottom: 5%;
+    }
+    .portfolioBtn {
+        bottom: 0;
+    }
+    .contactBtn {
+        bottom: -25%;
+    }
+}
+
+@media(max-width:376px) and (orientation: portrait){
     .project {
         width: 280px;
         height: 280px;
@@ -900,8 +1000,11 @@ h2 {
     }
     .middleDiv p {
         font-size: 1800%;
-        top: -10%;
-        right: 14.5%;
+        top: -5%;
+        right: 9%;
+    }
+    .middleDiv {
+        left: 30%;
     }
     .name {
         bottom: 29.5%;
@@ -929,101 +1032,24 @@ h2 {
         margin-bottom: 5px;
     }
 }
-@media(max-width:824px) and (orientation: landscape){
-    .leftDiv p {
-        font-size: 125%;
-    }
-    .middleDiv p {
-        font-size: 1500%;
-        position: relative;
-        top: -15%;
-    }
+@media(max-width:320px) and (orientation: portrait){
+    .leftDiv p,
     .rightDiv p {
-        font-size: 125%;
-    }
-    .to {
-        top: 21%;
-    }
-    .the {
-        top: 35%;
-    }
-    .portfolio {
-        top: 43%;
-    }
-    .of {
-        top: 58%;
+        font-size: 110%;
     }
     .name {
-        bottom: 65%;
+        bottom: 24.5%;
     }
     .frontend {
-        bottom: 53%;
+        bottom: 19.5%;
     }
     .and {
-        bottom: 41%;
+        bottom: 14.5%;
     }
     .backend {
-        bottom: 29%;
+        bottom: 9.5%;
     }
-    .developer {
-        bottom: 17%;
-    }
-    .portfolioBtn,
-    .contactBtn {
-        font-size: 100%;
-    }
-    .contactBtn {
-        bottom: -10%;
-    }
-    h2 {
-        font-size: 220%;
-    }
-    #about p {
-        font-size: 100%;
-    }
-    .skillList h4 {
-        font-size: 150%;
-    }
-    .skillList span {
-        font-size: 120%;
-    }
-    #skills {
-        height: auto;
-    }
-    .project {
-        width: 280px;
-        height: 280px;
-    }
-    #contact p {
-        font-size: 100%;
-    }
-    #contact a {
-        font-size: 100%;
-    }
-    footer p {
-        font-size: 100%;
-    }
-}
-@media(max-width:569px) and (orientation: landscape){
-    .middleDiv p {
-        top: -30%;
-    }
-    .frontend {
-        bottom: 50%;
-    }
-    .and {
-        bottom: 35%;
-    }
-    .backend {
-        bottom: 20%;
-    }
-    .developer {
-        bottom: 5%;
-    }
-    .portfolioBtn {
-        bottom: 0;
-    }
-    .contactBtn {
-        bottom: -25%;
+    .rightDiv .developer {
+        bottom: 4.5%;
     }
 }
